--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <p class="photo-paragraph"> Minha Foto</p>
 
-    <img src="../assets/eu.jpg" width=300 height=400>
+    <img src="./assets/eu.jpg" width=300 height=400>
     <br>
 
 </body>
